// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`erp-data-set-overlay renders correctly (disabled) 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-5lz34k-Modal"
      >
        <header
          className="css-3h6k8q-Modal"
        >
          <div
            className="css-1m71lk0-Modal"
          >
            <div
              className="css-raabi0-Modal"
            >
              erp__table_label_order_id (erp__table_label_value_number) 1
            </div>
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[Function]}
          />
        </header>
        <section
          className="css-tcykc8-Modal"
        >
          <div
            className="erp-dataset-content css-174v49r-ErpDataSetOverlay"
          >
            <div
              className="erp-dataset-primary-key css-12vwvtw-ErpDataSetOverlay"
            >
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1kfu95l-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_order_id (erp_dataset__primary_key)
                    <div
                      className="css-1kbte0v-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-hsn270"
                    >
                      <input
                        className="css-1hkmzl4"
                        defaultValue=""
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="number"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="erp-dataset-entities css-vey1yp-ErpDataSetOverlay"
            >
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_cashback
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-16hptr6"
                        defaultValue="common_number"
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_discount
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-16hptr6"
                        defaultValue="common_number"
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_delivery_charge
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-16hptr6"
                        defaultValue="common_number"
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_delivery_status
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-jbu9kz"
                    data-testid="custom-select"
                  >
                    <div
                      className="css-0"
                    />
                    <div
                      className="css-18vooac"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="custom-select"
                      >
                        MockedSelect
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_delivery_date
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-myfy74"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      Mocked Date Picker
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_note
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-10yzrqy"
                        defaultValue=""
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1kfu95l-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_customer_id (erp_dataset__foreign_key)
                    <div
                      className="css-hu3isn-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1eppoun"
                    >
                      <div
                        className="css-1uzatgd"
                        onClick={[Function]}
                      >
                        <div
                          className="css-0"
                          id="tooltip_42"
                        >
                          <input
                            className="css-1lt4t93"
                            defaultValue=""
                            disabled={true}
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </div>
                        <div
                          className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                          role="tooltip"
                          style={
                            {
                              "backgroundColor": "#2e3032",
                              "zIndex": 1,
                            }
                          }
                        >
                          erp_dataset__navigate_to_dataset
                          <div
                            className="react-tooltip-arrow styles-module_arrow__K0L3T"
                            style={{}}
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1kfu95l-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_employee_id (erp_dataset__foreign_key)
                    <div
                      className="css-hu3isn-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1eppoun"
                    >
                      <div
                        className="css-1uzatgd"
                        onClick={[Function]}
                      >
                        <div
                          className="css-0"
                          id="tooltip_42"
                        >
                          <input
                            className="css-1lt4t93"
                            defaultValue=""
                            disabled={true}
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </div>
                        <div
                          className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                          role="tooltip"
                          style={
                            {
                              "backgroundColor": "#2e3032",
                              "zIndex": 1,
                            }
                          }
                        >
                          erp_dataset__navigate_to_dataset
                          <div
                            className="react-tooltip-arrow styles-module_arrow__K0L3T"
                            style={{}}
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="erp-dataset-binary-file css-1jqwhcs-ErpDataSetOverlay"
            >
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_binary_file_id
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="binary-input css-m27hme-BinaryUploadInput"
                  >
                    <div
                      className="css-1baflxz-BinaryUploadInput"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-12ccz-Text"
                      >
                        binary_input__placeholder_label
                      </div>
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <button
                        className="css-1cywa3f-Button"
                        disabled={true}
                        onClick={[Function]}
                      >
                        <div
                          className="css-95j2hm-Button"
                        >
                          <div
                            className="css-mj8vo1-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                        </div>
                      </button>
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      erp_dataset__file_upload_title
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="copy-dataset-to-clipboard css-3kdnah-ErpDataSetOverlay"
            >
              <div
                className="css-tjmzhb-ErpDataSetOverlay"
                onClick={[Function]}
              >
                <div
                  className="css-qkl61k-Tooltip"
                  id="tooltip_42"
                >
                  <div
                    className="css-jf62sv-ErpDataSetOverlay"
                  >
                    erp_dataset__copy_all
                  </div>
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                  role="tooltip"
                  style={
                    {
                      "backgroundColor": "#2e3032",
                      "zIndex": 1,
                    }
                  }
                >
                  clipboard__copy
                  <div
                    className="react-tooltip-arrow styles-module_arrow__K0L3T"
                    style={{}}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1f9sij2-ErpDataSetOverlay"
          >
            <div
              className="erp-accordion css-1bwtgc9-Card"
            >
              <div
                className="card-header css-1wbumr0-CardHeader"
              >
                <div
                  className="css-17ett1w-AccordionCard"
                  onClick={[Function]}
                >
                  <div
                    className="css-fsv1sy-AccordionCard"
                  >
                    <div
                      className="css-v5hrte-AccordionCard"
                    >
                      erp_accordion__invoice_label (erp_dataset__foreign_key)
                    </div>
                    <div
                      className="css-6s7adz-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                  <div
                    className="css-w6fyje-AccordionCard"
                  >
                    erp_accordion__invoice_additional_label
                  </div>
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              className="erp-accordion css-1bwtgc9-Card"
            >
              <div
                className="card-header css-1wbumr0-CardHeader"
              >
                <div
                  className="css-17ett1w-AccordionCard"
                  onClick={[Function]}
                >
                  <div
                    className="css-fsv1sy-AccordionCard"
                  >
                    <div
                      className="css-v5hrte-AccordionCard"
                    >
                      erp_accordion__order_item_label (erp_dataset__foreign_key)
                    </div>
                    <div
                      className="css-6s7adz-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                  <div
                    className="css-w6fyje-AccordionCard"
                  >
                    erp_accordion__order_item_additional_label
                  </div>
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`erp-data-set-overlay renders correctly 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-5lz34k-Modal"
      >
        <header
          className="css-3h6k8q-Modal"
        >
          <div
            className="css-1m71lk0-Modal"
          >
            <div
              className="css-raabi0-Modal"
            >
              erp__table_label_order_id (erp__table_label_value_number) 1
            </div>
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[Function]}
          />
        </header>
        <section
          className="css-tcykc8-Modal"
        >
          <div
            className="erp-dataset-content css-174v49r-ErpDataSetOverlay"
          >
            <div
              className="erp-dataset-primary-key css-12vwvtw-ErpDataSetOverlay"
            >
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1l1nccv-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_order_id (erp_dataset__primary_key) (erp__table_label_value_number)
                    <sup>
                      *
                    </sup>
                    <div
                      className="css-1kbte0v-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-hsn270"
                    >
                      <input
                        className="css-1hkmzl4"
                        defaultValue=""
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="number"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="erp-dataset-entities css-vey1yp-ErpDataSetOverlay"
            >
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_cashback (erp__table_label_value_currency)
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-16hptr6"
                        defaultValue="common_number"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_discount (erp__table_label_value_currency)
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-16hptr6"
                        defaultValue="common_number"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-ir2irf-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_delivery_charge (erp__table_label_value_currency)
                    <sup>
                      *
                    </sup>
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-16hptr6"
                        defaultValue="common_number"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-ir2irf-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_delivery_status (erp__table_label_value_delivery_status)
                    <sup>
                      *
                    </sup>
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-jbu9kz"
                    data-testid="custom-select"
                  >
                    <div
                      className="css-0"
                    />
                    <div
                      className="css-18vooac"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="custom-select"
                      >
                        MockedSelect
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-ir2irf-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_delivery_date (erp__table_label_value_date)
                    <sup>
                      *
                    </sup>
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-1933itq"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      Mocked Date Picker
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_note (erp__table_label_value_string)
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-17as3x0"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-1f5p64r"
                    >
                      <input
                        className="css-10yzrqy"
                        defaultValue=""
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1l1nccv-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_order_label_customer_id (erp_dataset__foreign_key) (erp__table_label_value_number)
                    <sup>
                      *
                    </sup>
                    <div
                      className="css-hu3isn-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-18fst3t"
                  >
                    <div
                      className="css-1ezojgn"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-oqraj9"
                      >
                        <input
                          autoComplete="off"
                          className="css-pkbj54"
                          defaultValue=""
                          disabled={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      className="results-list css-110siln"
                      style={
                        {
                          "left": "0",
                          "position": "fixed",
                          "top": "0",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1l1nccv-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_employee_id (erp_dataset__foreign_key) (erp__table_label_value_number)
                    <sup>
                      *
                    </sup>
                    <div
                      className="css-hu3isn-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="css-18fst3t"
                  >
                    <div
                      className="css-1ezojgn"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-oqraj9"
                      >
                        <input
                          autoComplete="off"
                          className="css-pkbj54"
                          defaultValue=""
                          disabled={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      className="results-list css-110siln"
                      style={
                        {
                          "left": "0",
                          "position": "fixed",
                          "top": "0",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="erp-dataset-binary-file css-1jqwhcs-ErpDataSetOverlay"
            >
              <div
                className="css-siz1y8-ErpDataSetOverlay"
              >
                <div
                  className="css-1u2gmsc-ErpDataSetOverlay"
                >
                  <div
                    className="css-13vqevq-ErpDataSetOverlay"
                  >
                    erp__table_label_binary_file_id (erp__table_label_value_binary)
                  </div>
                </div>
                <div
                  className="css-1dra1yp-ErpDataSetOverlay"
                >
                  <div
                    className="binary-input css-m27hme-BinaryUploadInput"
                  >
                    <div
                      className="css-1baflxz-BinaryUploadInput"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-12ccz-Text"
                      >
                        binary_input__placeholder_label
                      </div>
                    </div>
                    <div
                      className="css-0"
                      id="tooltip_42"
                    >
                      <button
                        className="css-1cywa3f-Button"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <div
                          className="css-95j2hm-Button"
                        >
                          <div
                            className="css-mj8vo1-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                        </div>
                      </button>
                    </div>
                    <div
                      className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
                      role="tooltip"
                      style={
                        {
                          "backgroundColor": "#2e3032",
                          "zIndex": 1,
                        }
                      }
                    >
                      erp_dataset__file_upload_title
                      <div
                        className="react-tooltip-arrow styles-module_arrow__K0L3T"
                        style={{}}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-3ybq6j-ErpDataSetOverlay"
            >
              <sup>
                *
              </sup>
              <div
                className="css-1du93n7-Text"
              >
                erp_dataset__required_info
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-1j4uotz-Modal"
        >
          <button
            className="delete-button css-1z5jon-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-kuxry5-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              erp_dataset__delete
            </div>
          </button>
          <button
            className="cancel-button css-1ed521q-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              confirm_button
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;
